--- a/hub/transplant/postop/complications.html
+++ b/hub/transplant/postop/complications.html
@@ -12,7 +12,7 @@
   </script>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Transplant Complications - Kidney Transplant Hub</title>
+  <title>Post-Op: Complications - Kidney Transplant Hub</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
@@ -24,11 +24,51 @@
   <div data-include="/includes/header.html"></div>
   <main class="content" id="main">
     <div data-include="/includes/transplant-subnav.html"></div>
-    <h1>Transplant Complications</h1>
-    <p>
-      Information about common complications following a kidney transplant, including 
-      rejection, infection, and medication side effects, with guidance on management.
-    </p>
+    <div data-include="/includes/transplant-postop-subnav.html"></div>
+<h1>Post-Op: Complications</h1>
+<p>Most transplants do well. Problems are more manageable when caught early. Call if something feels wrong—trust that spidey sense.</p>
+
+<h2>Rejection (the immune response)</h2>
+<ul>
+  <li><strong>What it is:</strong> the immune system attacks the kidney. It can happen early or later, even years out.</li>
+  <li><strong>How it’s found:</strong> rising creatinine, urine changes, symptoms, and sometimes a biopsy.</li>
+  <li><strong>Treatment:</strong> medicines are adjusted; some cases need short infusions or a hospital stay.</li>
+  <li><strong>Symptoms to report:</strong> fever, new pain over the kidney area, swelling, decreased urine, sudden weight gain.</li>
+</ul>
+
+<h2>Infections</h2>
+<ul>
+  <li><strong>Early (first month):</strong> surgical/line infections and typical hospital germs.</li>
+  <li><strong>1–6 months:</strong> you’re more vulnerable to certain viruses and opportunistic infections—report fevers and persistent cough/diarrhea.</li>
+  <li><strong>After 6 months:</strong> risk shifts toward community infections (flu, COVID, stomach bugs). Keep vaccines updated and call early for antivirals if exposed.</li>
+</ul>
+
+<h2>Medication-related issues</h2>
+<ul>
+  <li>High blood pressure, higher blood sugar or new diabetes, high cholesterol.</li>
+  <li>Tremor, headache, stomach upset/diarrhea.</li>
+  <li>Thinner bones over time; ask about vitamin D/calcium and screening.</li>
+</ul>
+
+<h2>Other potential problems</h2>
+<ul>
+  <li><strong>Urine/ureter issues:</strong> leaks or narrowings can cause pain, swelling, or low urine—these are fixable but need prompt care.</li>
+  <li><strong>Blood clots:</strong> calf pain/swelling or shortness of breath needs urgent evaluation.</li>
+  <li><strong>Skin cancers:</strong> more common on sun-exposed areas—do regular checks and use sunscreen.</li>
+</ul>
+
+<h2>When to call</h2>
+<ul>
+  <li><strong>Call your clinic promptly:</strong> fever &gt; 100.4–101°F, chills, worsening cough, vomiting that prevents meds, new/worsening pain over the kidney, less urine, sudden weight gain.</li>
+  <li><strong>Call 911 / go to ER:</strong> chest pain, trouble breathing, one-sided leg swelling/pain, severe dehydration, confusion, stroke-like symptoms.</li>
+</ul>
+
+<div class="callout">
+  <p><strong>Questions to ask:</strong> What are my usual “warning” patterns? If my labs rise, what tests come next? When should I go straight to the ER vs. call the clinic?</p>
+</div>
+
+<p class="disclaimer">This page is educational and can’t cover every case. Your care team will personalize prevention and treatment.</p>
+
   </main>
   <div data-include="/includes/footer.html"></div>
   <script src="/scripts/analytics.js" defer></script>
