--- a/hub/transplant/postop/index.html
+++ b/hub/transplant/postop/index.html
@@ -12,7 +12,7 @@
   </script>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Kidney Transplant Overview</title>
+  <title>Post-Op Overview</title>
   <!-- Google Fonts: Open Sans -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -25,8 +25,9 @@
   <div data-include="/includes/header.html"></div>
   <main class="content" id="main">
     <div data-include="/includes/transplant-subnav.html"></div>
+    <div data-include="/includes/transplant-postop-subnav.html"></div>
     
-   <h1>Post-Op: Life After Kidney Transplant</h1>
+   <h1>Post-Op Overview</h1>
   <p>
     After leaving the hospital, recovery continues at home and in follow-up visits 
     with your transplant team. This section explains ongoing care, introduces the 
@@ -35,7 +36,7 @@
   </p>
 
   <section class="testimonial-summary">
-    <h2><a href="recovery.html">Recovery After Discharge</a></h2>
+    <h2><a href="/hub/transplant/postop/recovery.html" data-evt="postop:recovery">Recovery After Discharge</a></h2>
     <p>
       Learn about wound care, activity restrictions, and how your transplant team 
       monitors your new kidney in the weeks after surgery.
@@ -43,7 +44,7 @@
   </section>
 
   <section class="testimonial-summary">
-    <h2><a href="staff-postop.html">Post-Op Staff Roles</a></h2>
+    <h2><a href="/hub/transplant/postop/staff/" data-evt="postop:staff">Post-Op Staff Roles</a></h2>
     <p>
       Meet the nurses, pharmacists, dietitians, and transplant coordinators who 
       guide your long-term care after transplant surgery.
@@ -51,7 +52,7 @@
   </section>
 
   <section class="testimonial-summary">
-    <h2><a href="complications.html">Complications & Rejection</a></h2>
+    <h2><a href="/hub/transplant/postop/complications.html" data-evt="postop:complications">Complications & Rejection</a></h2>
     <p>
       Understand the signs of kidney rejection, infections, and other complications, 
       and learn how your team helps manage and prevent them.
@@ -59,7 +60,7 @@
   </section>
 
   <section class="testimonial-summary">
-    <h2><a href="life-after.html">Life After Transplant</a></h2>
+    <h2><a href="/hub/transplant/postop/life-after.html" data-evt="postop:life-after">Life After Transplant</a></h2>
     <p>
       Explore what long-term life with a kidney transplant looks like, including 
       medications, diet, and ways to stay healthy and active.
