--- a/hub/transplant/postop/life-after.html
+++ b/hub/transplant/postop/life-after.html
@@ -24,11 +24,66 @@
   <div data-include="/includes/header.html"></div>
   <main class="content" id="main">
     <div data-include="/includes/transplant-subnav.html"></div>
-    <h1>Life After Transplant</h1>
-    <p>
-      Understand long-term care after a kidney transplant, including medication routines,
-      lifestyle adjustments, and staying healthy for years to come.
-    </p>
+    <div data-include="/includes/transplant-postop-subnav.html"></div>
+<h1>Life After Transplant</h1>
+<p>The goal now is steady habits: take meds on time, show up for labs, move your body, and call early if something feels off. Most people return to full, active lives.</p>
+
+<h2>Anti-rejection medicines (immunosuppression)</h2>
+<p>Most people take 2–3 medicines long-term to prevent the immune system from attacking the kidney.</p>
+<ul>
+  <li><strong>What they do:</strong> lower immune activity enough to protect the kidney while still letting you fight routine infections.</li>
+  <li><strong>How they’re adjusted:</strong> levels are checked with blood tests; doses change over time.</li>
+  <li><strong>Common side effects (varies by person):</strong> tremor, headache, higher blood pressure or sugar, stomach upset/diarrhea, more bruising, mood or sleep changes (especially with steroids).</li>
+  <li><strong>Don’t skip or “self-taper.”</strong> If a dose is late, call the clinic for instructions.</li>
+  <li><strong>Interactions:</strong> some antibiotics, antifungals, seizure meds, and certain citrus (e.g., grapefruit) can change levels—<em>always</em> check before new meds or supplements.</li>
+</ul>
+
+<h2>Infection-smart living</h2>
+<ul>
+  <li>Hand hygiene, especially before eating and after crowds. Masks are reasonable indoors during the early months or outbreaks.</li>
+  <li>Food safety: cook meats/eggs fully; avoid unpasteurized dairy; rinse produce well.</li>
+  <li>Yard/pet care: gloves for gardening/litter; wash hands after.</li>
+</ul>
+
+<h2>Vaccines</h2>
+<ul>
+  <li>Stay up to date on non-live vaccines (e.g., flu, COVID, pneumonia, hepatitis B, shingles [recombinant]).</li>
+  <li><strong>Avoid live vaccines</strong> unless your team specifically approves.</li>
+</ul>
+
+<h2>Skin, sun, and screenings</h2>
+<ul>
+  <li>Transplant medicines raise <strong>skin cancer</strong> risk. Use broad-spectrum sunscreen daily, hats, and long sleeves when practical.</li>
+  <li>See a dermatologist regularly; do routine age-appropriate cancer screening.</li>
+</ul>
+
+<h2>Daily habits that matter</h2>
+<ul>
+  <li><strong>BP &amp; weight:</strong> keep a home log; high BP is common after transplant.</li>
+  <li><strong>Movement:</strong> aim for 150 minutes/week of moderate activity once cleared.</li>
+  <li><strong>Oral health:</strong> see your dentist; tell them you’ve had a transplant.</li>
+  <li><strong>Alcohol &amp; tobacco:</strong> avoid smoking/vaping; keep alcohol modest and clear with your team.</li>
+</ul>
+
+<h2>Sex, fertility, and family planning</h2>
+<ul>
+  <li>Fertility often improves after transplant. Many people safely conceive after things are stable; timing and meds should be reviewed with your team.</li>
+  <li>Use reliable contraception until you’ve discussed a plan with the clinic.</li>
+</ul>
+
+<h2>Work, travel, and life admin</h2>
+<ul>
+  <li><strong>Work:</strong> ramp up as energy returns; request temporary accommodations if needed.</li>
+  <li><strong>Travel:</strong> pack meds in carry-on, bring extra doses, and keep the dosing schedule consistent across time zones.</li>
+  <li>Keep a wallet card or phone note with your transplant date, clinic number, and medication list.</li>
+</ul>
+
+<div class="callout">
+  <p><strong>Questions to ask:</strong> Which vaccines are due this year? What drug/food interactions should I avoid? What’s my long-term target for blood pressure and labs?</p>
+</div>
+
+<p class="disclaimer">This page is educational, not medical advice. Your team will tailor medicines and targets to you.</p>
+
   </main>
   <div data-include="/includes/footer.html"></div>
   <script src="/scripts/analytics.js" defer></script>
