--- a/hub/transplant/postop/recovery.html
+++ b/hub/transplant/postop/recovery.html
@@ -12,7 +12,7 @@
   </script>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Recovery After Transplant - Kidney Transplant Hub</title>
+  <title>Post-Op: Recovery - Kidney Transplant Hub</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
@@ -24,11 +24,50 @@
   <div data-include="/includes/header.html"></div>
   <main class="content" id="main">
     <div data-include="/includes/transplant-subnav.html"></div>
-    <h1>Recovery After Transplant</h1>
-    <p>
-      Learn what recovery from a kidney transplant is like, including hospital stay 
-      duration, follow-up appointments, and safe return to normal activities.
-    </p>
+    <div data-include="/includes/transplant-postop-subnav.html"></div>
+<h1>Post-Op: Recovery</h1>
+<p>Recovery is individual. Most people go home in 2–4 days, feel steadier by week 2, and rebuild strength over the next few months.</p>
+
+<h2>What the first 6 weeks usually look like</h2>
+<ul>
+  <li><strong>Hospital (days 1–4):</strong> walking the day of/after surgery, pain control, urine and labs watched closely.</li>
+  <li><strong>Week 1–2:</strong> expect fatigue. Short walks daily. No tub baths, pools, or hot tubs until incisions fully closed.</li>
+  <li><strong>Weeks 3–6:</strong> walking > 30 minutes most days; light chores. Many return to desk work by 2–4 weeks; physical jobs can take 4–8+ weeks with clearance.</li>
+</ul>
+
+<h2>Medications &amp; labs</h2>
+<ul>
+  <li><strong>Take anti-rejection meds exactly on time.</strong> Set alarms; do not double up if you miss—call your team.</li>
+  <li><strong>Lab schedule:</strong> very frequent at first (often 2×/week), then weekly, then less often as things stabilize.</li>
+  <li><strong>Before-dose labs:</strong> if your team asks for a “trough,” have blood drawn <em>before</em> your morning dose.</li>
+</ul>
+
+<h2>Incision, pain, and activity</h2>
+<ul>
+  <li>Keep the incision clean/dry; pat dry after showers. Watch for spreading redness, drainage, or odor.</li>
+  <li>Use stool softeners with narcotics; transition to acetaminophen if approved. Avoid NSAIDs unless your team says otherwise.</li>
+  <li>No lifting > 10–15 lbs and avoid core-straining moves until cleared. Drive only when off narcotics and you can brake/turn safely.</li>
+</ul>
+
+<h2>Food, fluids, and sleep</h2>
+<ul>
+  <li>Hydrate steadily unless told otherwise. Aim for pale yellow urine.</li>
+  <li>Balanced meals; limit salt to help blood pressure. If food tastes “off,” small frequent meals are fine.</li>
+  <li>Some anti-rejection meds interact with certain citrus (e.g., grapefruit). Ask your pharmacist what to avoid.</li>
+</ul>
+
+<h2>When to call</h2>
+<ul>
+  <li><strong>Call your team now:</strong> fever &gt; 101°F, vomiting that prevents meds, new/worsening swelling at the incision, urine output dropping, new leg swelling or calf pain.</li>
+  <li><strong>Call 911 / go to ER:</strong> severe chest pain, trouble breathing, severe bleeding, confusion, inability to wake/stay awake.</li>
+</ul>
+
+<div class="callout">
+  <p><strong>Questions to ask:</strong> What’s my activity limit and for how long? When can I return to work or driving? Which symptoms should trigger an urgent call vs. a message?</p>
+</div>
+
+<p class="disclaimer">This page is educational, not medical advice. Follow your team’s specific instructions.</p>
+
   </main>
   <div data-include="/includes/footer.html"></div>
   <script src="/scripts/analytics.js" defer></script>
