--- a/hub/transplant/postop/staff/index.html
+++ b/hub/transplant/postop/staff/index.html
@@ -28,17 +28,35 @@
 <div data-include="/includes/transplant-postop-staff-subnav.html"></div>
 
 <h1>Post-Op Staff</h1>
-<p>After transplant, a small team checks labs, tunes medicines, teaches safety, and helps you get back to real life. Meet the people you’ll see most often.</p>
+<p>After transplant, this crew watches your labs, tunes medicines, and helps you get back to normal life. Meet the people you’ll see most often.</p>
 
-<ul>
-  <li><a href="/hub/transplant/postop/staff/nephrologist.html" data-evt="postop-staff:nephrologist">Transplant Nephrologist</a> — leads medical care and adjusts anti-rejection meds.</li>
-  <li><a href="/hub/transplant/postop/staff/pharmacist.html" data-evt="postop-staff:pharmacist">Transplant Pharmacist</a> — checks drug levels, interactions, and side effects.</li>
-  <li><a href="/hub/transplant/postop/staff/nurse-coordinator.html" data-evt="postop-staff:nurse">Nurse Coordinator</a> — triage, scheduling, refills, “who do I call?”</li>
-  <li><a href="/hub/transplant/postop/staff/dietitian.html" data-evt="postop-staff:dietitian">Dietitian</a> — food safety, weight/BP/sugar goals, electrolytes.</li>
-  <li><a href="/hub/transplant/postop/staff/social-worker.html" data-evt="postop-staff:social-worker">Social Worker</a> — coping, work/benefits paperwork, caregiver support.</li>
-</ul>
+<section class="testimonial-summary">
+  <h2><a href="/hub/transplant/postop/staff/nephrologist.html" data-evt="postop-staff:nephrologist">Transplant Nephrologist</a></h2>
+  <p>Leads medical care after transplant and adjusts anti-rejection meds based on labs and symptoms.</p>
+</section>
 
-<p class="disclaimer">Informational only; your center’s roles may vary.</p>
+<section class="testimonial-summary">
+  <h2><a href="/hub/transplant/postop/staff/pharmacist.html" data-evt="postop-staff:pharmacist">Transplant Pharmacist</a></h2>
+  <p>Checks drug levels, looks for interactions, teaches timing (e.g., trough labs), and helps with refills/PA.</p>
+</section>
+
+<section class="testimonial-summary">
+  <h2><a href="/hub/transplant/postop/staff/nurse-coordinator.html" data-evt="postop-staff:nurse">Nurse Coordinator</a></h2>
+  <p>Your first call for symptoms, scheduling, refills, and “who do I call?” triage.</p>
+</section>
+
+<section class="testimonial-summary">
+  <h2><a href="/hub/transplant/postop/staff/dietitian.html" data-evt="postop-staff:dietitian">Dietitian</a></h2>
+  <p>Food safety, protein/calorie goals, salt and sugar plans, and lab-guided tweaks (potassium, magnesium).</p>
+</section>
+
+<section class="testimonial-summary">
+  <h2><a href="/hub/transplant/postop/staff/social-worker.html" data-evt="postop-staff:social-worker">Social Worker</a></h2>
+  <p>Coping support, work/benefits paperwork, caregiver resources, and practical problem-solving.</p>
+</section>
+
+<p class="disclaimer">Informational only; roles vary by center.</p>
+
 
   </main>
   <div data-include="/includes/footer.html"></div>
