--- a/hub/transplant/preop/evaluation.html
+++ b/hub/transplant/preop/evaluation.html
@@ -24,11 +24,34 @@
   <div data-include="/includes/header.html"></div>
   <main class="content" id="main">
     <div data-include="/includes/transplant-subnav.html"></div>
-    <h1>Evaluation for Transplant</h1>
-    <p>
-      This section explains the evaluation process for transplant candidates, including 
-      medical tests, consultations, and determining eligibility.
-    </p>
+<h1>Pre-Op: Evaluation &amp; Testing</h1>
+<p>The evaluation checks that surgery is safe for you and that the kidney match is sound. Some tests happen locally; others at the transplant center.</p>
+
+<h2>Core pieces</h2>
+<ul>
+  <li><strong>Labs:</strong> blood count, kidney/liver function, electrolytes, A1c, lipids, infectious-disease screening.</li>
+  <li><strong>Typing &amp; antibodies:</strong> blood type, HLA typing, and antibody screen (cPRA).</li>
+  <li><strong>Crossmatch:</strong> mixes your blood with the donor’s to see if it reacts.</li>
+  <li><strong>Heart &amp; lungs:</strong> EKG; echo and/or stress test as needed; chest X-ray.</li>
+  <li><strong>Imaging:</strong> abdominal ultrasound or CT as needed; vessels evaluated for surgery planning.</li>
+  <li><strong>Dental &amp; cancer screening:</strong> clear untreated infections; complete age-appropriate screenings.</li>
+  <li><strong>Consults:</strong> nephrologist, surgeon (pre-op visit), pharmacist/med ed, social worker, dietitian; sometimes anesthesia.</li>
+</ul>
+
+<h2>Timeline</h2>
+<p>Many centers complete work-up in 1–3 months; complex findings can add time. Ask which tests you can do locally.</p>
+
+<h2>How to prepare</h2>
+<ul>
+  <li>Bring medication list with exact times you take them.</li>
+  <li>List past surgeries, allergies, and any devices (stents, ports).</li>
+  <li>Home logs: blood pressure, weight, blood sugars (if applicable).</li>
+</ul>
+
+<div class="callout"><p><strong>Questions to ask:</strong> What’s still pending? What would delay my clearance? Can any tests be bundled in one day?</p></div>
+
+<p class="disclaimer">Informational only; testing varies by center and your health history.</p>
+
   </main>
   <div data-include="/includes/footer.html"></div>
   <script src="/scripts/analytics.js" defer></script>
