--- a/hub/transplant/preop/index.html
+++ b/hub/transplant/preop/index.html
@@ -25,53 +25,36 @@
   <div data-include="/includes/header.html"></div>
   <main class="content" id="main">
     <div data-include="/includes/transplant-subnav.html"></div>
-      <h1>Pre-Op: Preparing for Kidney Transplant</h1>
-  <p>
-    Before receiving a kidney transplant, you’ll go through an evaluation and 
-    testing process, learn about donor matching, and meet a dedicated pre-op 
-    care team. This section covers everything you need to know to feel prepared 
-    and confident leading up to surgery.
-  </p>
+    <div data-include="/includes/transplant-subnav.html"></div>
+<div data-include="/includes/transplant-preop-subnav.html"></div>
 
-  <section class="testimonial-summary">
-    <h2><a href="evaluation.html">Evaluation & Testing</a></h2>
-    <p>
-      Understand the medical and psychological evaluations, lab work, and 
-      specialist consultations required before being cleared for transplant.
-    </p>
-  </section>
+<h1>Pre-Op: Preparing for Kidney Transplant</h1>
+<p>Before transplant you’ll complete testing, learn how matching works, review risks, and meet the team that gets you ready.</p>
 
-  <section class="testimonial-summary">
-    <h2><a href="matching.html">Finding a Donor</a></h2>
-    <p>
-      Learn how donor matching works, including blood type compatibility, 
-      tissue typing, and paired donation programs.
-    </p>
-  </section>
+<section class="testimonial-summary">
+  <h2><a href="/hub/transplant/preop/evaluation.html" data-evt="preop:evaluation">Evaluation &amp; Testing</a></h2>
+  <p>Labs, heart and lung checks, imaging, and consults to be sure surgery is safe and the match is right.</p>
+</section>
 
-  <section class="testimonial-summary">
-    <h2><a href="staff-preop.html">Pre-Op Staff Roles</a></h2>
-    <p>
-      Meet the pre-transplant team—nephrologists, transplant coordinators, 
-      dietitians, and social workers—who help you prepare for surgery.
-    </p>
-  </section>
+<section class="testimonial-summary">
+  <h2><a href="/hub/transplant/preop/matching.html" data-evt="preop:matching">Finding a Donor</a></h2>
+  <p>Blood type, HLA typing, crossmatch, waitlist basics, and paired-exchange options.</p>
+</section>
 
-  <section class="testimonial-summary">
-    <h2><a href="risks.html">Risks & Complications (Pre-Surgery)</a></h2>
-    <p>
-      Explore the potential risks and considerations discussed during 
-      transplant evaluation, and how your care team helps manage them.
-    </p>
-  </section>
+<section class="testimonial-summary">
+  <h2><a href="/hub/transplant/preop/risks.html" data-evt="preop:risks">Risks &amp; Considerations</a></h2>
+  <p>Realistic look at surgical risks, infection risk later, and how the team lowers those risks.</p>
+</section>
 
-  <section class="callout">
-    <p>
-      Preparing for a kidney transplant can feel overwhelming. Use this section 
-      to understand the process, meet your care team, and know what questions 
-      to ask before surgery.
-    </p>
-  </section>
+<section class="testimonial-summary">
+  <h2><a href="/hub/transplant/preop/staff/" data-evt="preop:staff">Pre-Op Staff Roles</a></h2>
+  <p>Who does what before surgery—coordinator, nephrologist, surgeon (consult), social worker, financial coordinator.</p>
+</section>
+
+<section class="callout">
+  <p><strong>Tip:</strong> keep a single folder (or phone note) for your med list, allergies, test dates, and clinic numbers. It saves time at every visit.</p>
+</section>
+
   </main>
   <div data-include="/includes/footer.html"></div>
   <script src="/scripts/analytics.js" defer></script>
