--- a/hub/transplant/preop/matching.html
+++ b/hub/transplant/preop/matching.html
@@ -24,11 +24,34 @@
   <div data-include="/includes/header.html"></div>
   <main class="content" id="main">
     <div data-include="/includes/transplant-subnav.html"></div>
-    <h1>Matching Process</h1>
-    <p>
-      Learn how transplant teams match recipients with donor kidneys, including blood type,
-      tissue typing, and cross-matching compatibility.
-    </p>
+<h1>Pre-Op: Finding a Donor &amp; Matching</h1>
+<p>Matching aims to lower rejection risk and get you a kidney that works well long-term. A “perfect” match isn’t required, but some combinations are safer.</p>
+
+<h2>The pieces of a match</h2>
+<ul>
+  <li><strong>Blood type:</strong> some pairs are compatible; incompatible may still be possible with programs or special protocols.</li>
+  <li><strong>HLA typing:</strong> compares immune markers from you and the donor.</li>
+  <li><strong>cPRA (antibodies):</strong> higher numbers mean you react to more potential donors; centers use strategies to expand options.</li>
+  <li><strong>Crossmatch:</strong> final check that your blood does not attack the donor cells.</li>
+</ul>
+
+<h2>Paths to a kidney</h2>
+<ul>
+  <li><strong>Deceased-donor waitlist:</strong> based on medical factors and waiting time; keep contact info current.</li>
+  <li><strong>Living donor:</strong> best outcomes, shorter wait. Can be related or unrelated.</li>
+  <li><strong>Paired exchange (swap):</strong> if your donor isn’t compatible with you, you match with another pair.</li>
+</ul>
+
+<h2>If you’re highly sensitized</h2>
+<ul>
+  <li>More screening and special matching; paired exchange can help.</li>
+  <li>Some centers use protocols to lower antibodies; risks/benefits are individualized.</li>
+</ul>
+
+<div class="callout"><p><strong>Questions to ask:</strong> What’s my blood type and cPRA? Am I eligible for paired exchange? How will I be contacted for an offer?</p></div>
+
+<p class="disclaimer">Informational only; matching policies vary by region and center.</p>
+
   </main>
   <div data-include="/includes/footer.html"></div>
   <script src="/scripts/analytics.js" defer></script>
