--- a/hub/transplant/preop/risks.html
+++ b/hub/transplant/preop/risks.html
@@ -24,11 +24,40 @@
   <div data-include="/includes/header.html"></div>
   <main class="content" id="main">
     <div data-include="/includes/transplant-subnav.html"></div>
-    <h1>Transplant Staff</h1>
-    <p>
-      Meet the different specialists involved in a kidney transplant, including surgeons,
-      nephrologists, coordinators, and nurses, and learn their roles in patient care.
-    </p>
+<h1>Pre-Op: Risks &amp; Considerations</h1>
+<p>Transplant offers better survival and quality of life for many people, but surgery and the medicines afterward have risks. Your team works to lower them.</p>
+
+<h2>Surgical &amp; immediate risks</h2>
+<ul>
+  <li>Bleeding, infection, blood clots.</li>
+  <li>Anesthesia complications (rare, individualized risk).</li>
+  <li><strong>Delayed graft function:</strong> kidney is slow to wake up; may need dialysis briefly.</li>
+  <li>Urine/ureter issues that sometimes need a procedure to fix.</li>
+</ul>
+
+<h2>Early after surgery</h2>
+<ul>
+  <li>Higher infection risk while doses are strong.</li>
+  <li>Medication side effects (blood pressure, blood sugar, electrolytes).</li>
+</ul>
+
+<h2>Longer-term considerations</h2>
+<ul>
+  <li>Chronic rejection risk over years; requires steady follow-up.</li>
+  <li>Skin cancer risk is higher—sun protection and dermatology checks matter.</li>
+</ul>
+
+<h2>How risk is reduced</h2>
+<ul>
+  <li>Careful screening and matching.</li>
+  <li>Antibiotics/antivirals when needed; vaccine planning.</li>
+  <li>Close labs and dose adjustments tailored to you.</li>
+</ul>
+
+<div class="callout"><p><strong>Questions to ask:</strong> What are <em>my</em> biggest risks? What warning signs should I watch for at home? How often will labs be checked early on?</p></div>
+
+<p class="disclaimer">Educational info—not medical advice. Your team will personalize risk and prevention.</p>
+
   </main>
   <div data-include="/includes/footer.html"></div>
   <script src="/scripts/analytics.js" defer></script>
