--- a/hub/transplant/preop/staff/coordinator.html
+++ b/hub/transplant/preop/staff/coordinator.html
@@ -18,32 +18,50 @@
     <div data-include="/includes/transplant-preop-subnav.html"></div>
     <div data-include="/includes/transplant-preop-staff-subnav.html"></div>
 
-    <h1>Pre-Op Staff: Transplant Coordinator</h1>
+    <h1>Transplant Coordinator</h1>
 
-    <h2>Role at a glance</h2>
-    <ul>
-      <li>What they focus on in this stage.</li>
-      <li>How they interact with you and the rest of the team.</li>
-    </ul>
+<h2>Short Description</h2>
+<p>
+  The transplant coordinator is your main point of contact before surgery. They
+  organize testing and visits, give clear instructions, track what’s still
+  pending, and keep the whole team in sync.
+</p>
 
-    <h2>They handle</h2>
-    <ul>
-      <li>Key responsibilities (bulleted, plain English).</li>
-    </ul>
+<h2>Main Priorities</h2>
+<ul>
+  <li>Schedule and bundle labs, imaging, and specialist consults.</li>
+  <li>Provide pre-op instructions (fasting, arrival time, which meds to take or hold).</li>
+  <li>Track results and clearance items; flag anything delaying surgery.</li>
+  <li>Coordinate communication between you, your caregiver, and the clinical team.</li>
+  <li>Prepare you for the admission call and day-of check-in steps.</li>
+</ul>
 
-    <h2>Not their job (who does it instead)</h2>
-    <ul>
-      <li>Boundary clarifier → points you to the right person.</li>
-    </ul>
+<h2>Issues They Work With</h2>
+<ul>
+  <li>Missed or expiring tests; arranging quick rechecks.</li>
+  <li>Confusing instructions (NPO/meds) — clarifies and reprints summaries.</li>
+  <li>Records transfer between your local doctors and the transplant center.</li>
+  <li>Logistics: transportation, lodging info, caregiver planning.</li>
+  <li>New symptoms before surgery — triages to the nurse/provider promptly.</li>
+</ul>
 
-    <h2>When to see them / what to bring</h2>
-    <ul>
-      <li>Typical visit timing and any prep (med list, forms, logs).</li>
-    </ul>
+<h2>When to Go to Them</h2>
+<ul>
+  <li>To see what’s still pending for clearance and what happens next.</li>
+  <li>When you need to reschedule, bundle appointments, or update contact info.</li>
+  <li>If you’re unsure about day-of instructions or medication timing.</li>
+  <li>When something changes (ER visit, infection, new diagnosis) and you need guidance on next steps.</li>
+</ul>
 
-    <div class="callout"><p><strong>Questions to ask:</strong> A short, practical list tailored to this role.</p></div>
+<h2>What They Don’t Handle (Boundaries)</h2>
+<ul>
+  <li>Final medical decisions or prescriptions — handled by the nephrologist/surgeon.</li>
+  <li>Insurance approvals and detailed cost estimates — financial coordinator.</li>
+  <li>Ongoing counseling or complex social needs — social worker.</li>
+  <li>Medication side-effect management and interactions — pharmacist/medical team.</li>
+  <li>Emergencies — call the clinic’s on-call line or 911.</li>
+</ul>
 
-    <p class="disclaimer">Informational only; your center’s process may differ.</p>
   </main>
   <div data-include="/includes/footer.html"></div>
   <script src="/scripts/analytics.js" defer></script>
