--- a/hub/transplant/preop/staff/financial-coordinator.html
+++ b/hub/transplant/preop/staff/financial-coordinator.html
@@ -18,32 +18,47 @@
     <div data-include="/includes/transplant-preop-subnav.html"></div>
     <div data-include="/includes/transplant-preop-staff-subnav.html"></div>
 
-    <h1>Pre-Op Staff: Financial Coordinator</h1>
+<h1>Financial Coordinator</h1>
 
-    <h2>Role at a glance</h2>
-    <ul>
-      <li>What they focus on in this stage.</li>
-      <li>How they interact with you and the rest of the team.</li>
-    </ul>
+<h2>Short Description</h2>
+<p>
+  The financial coordinator confirms coverage for your transplant, secures prior authorizations,
+  explains costs in plain language, and helps you avoid surprise bills.
+</p>
 
-    <h2>They handle</h2>
-    <ul>
-      <li>Key responsibilities (bulleted, plain English).</li>
-    </ul>
+<h2>Main Priorities</h2>
+<ul>
+  <li>Verify insurance eligibility and benefits for evaluation, surgery, and follow-up.</li>
+  <li>Submit and track prior authorizations (hospital, surgeon, anesthesia, imaging, labs).</li>
+  <li>Check coverage for anti-rejection and related medicines (specialty pharmacy if needed).</li>
+  <li>Provide estimates of out-of-pocket costs and payment options.</li>
+  <li>Connect you with assistance programs if you qualify.</li>
+</ul>
 
-    <h2>Not their job (who does it instead)</h2>
-    <ul>
-      <li>Boundary clarifier → points you to the right person.</li>
-    </ul>
+<h2>Issues They Work With</h2>
+<ul>
+  <li>Plan changes, COBRA, secondary insurance, or coordination of benefits.</li>
+  <li>Network status of facilities and providers; referrals if required.</li>
+  <li>Medication costs, step therapy, and pharmacy routing problems.</li>
+  <li>Billing questions and who to contact for statements or itemized bills.</li>
+</ul>
 
-    <h2>When to see them / what to bring</h2>
-    <ul>
-      <li>Typical visit timing and any prep (med list, forms, logs).</li>
-    </ul>
+<h2>When to Go to Them</h2>
+<ul>
+  <li>Early in the evaluation and any time your insurance or employment changes.</li>
+  <li>If you receive a denial, high copay quote, or confusing bill.</li>
+  <li>Before switching pharmacies or plans, so medicines stay covered without gaps.</li>
+  <li>When planning travel/lodging for surgery and follow-up visits.</li>
+</ul>
 
-    <div class="callout"><p><strong>Questions to ask:</strong> A short, practical list tailored to this role.</p></div>
+<h2>What They Don’t Handle (Boundaries)</h2>
+<ul>
+  <li>Medical decisions or prescriptions — handled by the clinical team.</li>
+  <li>Scheduling tests and day-of instructions — transplant coordinator.</li>
+  <li>Counseling and caregiver support — social worker.</li>
+  <li>Emergency financial crises — they can connect you to resources, but not make medical changes.</li>
+</ul>
 
-    <p class="disclaimer">Informational only; your center’s process may differ.</p>
   </main>
   <div data-include="/includes/footer.html"></div>
   <script src="/scripts/analytics.js" defer></script>
