--- a/hub/transplant/preop/staff/social-worker.html
+++ b/hub/transplant/preop/staff/social-worker.html
@@ -18,32 +18,46 @@
     <div data-include="/includes/transplant-preop-subnav.html"></div>
     <div data-include="/includes/transplant-preop-staff-subnav.html"></div>
 
-    <h1>Pre-Op Staff: Social Worker</h1>
+<h1>Social Worker</h1>
 
-    <h2>Role at a glance</h2>
-    <ul>
-      <li>What they focus on in this stage.</li>
-      <li>How they interact with you and the rest of the team.</li>
-    </ul>
+<h2>Short Description</h2>
+<p>
+  The social worker helps you and your caregiver prepare for surgery and the weeks after.
+  They focus on coping, practical planning, and connecting you with resources.
+</p>
 
-    <h2>They handle</h2>
-    <ul>
-      <li>Key responsibilities (bulleted, plain English).</li>
-    </ul>
+<h2>Main Priorities</h2>
+<ul>
+  <li>Build a realistic caregiver plan (rides, help at home, backups).</li>
+  <li>Screen for stress, anxiety, depression, and substance use; offer tools and referrals.</li>
+  <li>Guide work/benefits paperwork (FMLA, disability) and clinic documentation needs.</li>
+  <li>Connect you with transportation, lodging, and community support resources.</li>
+  <li>Teach what to expect emotionally before and after surgery.</li>
+</ul>
 
-    <h2>Not their job (who does it instead)</h2>
-    <ul>
-      <li>Boundary clarifier → points you to the right person.</li>
-    </ul>
+<h2>Issues They Work With</h2>
+<ul>
+  <li>Caregiver burnout risk, family conflict, or limited support at home.</li>
+  <li>Practical barriers to appointments (childcare, distance, time off).</li>
+  <li>Financial stress that impacts adherence (they coordinate with finance as needed).</li>
+  <li>Grief, fear, or past trauma that may flare around surgery.</li>
+</ul>
 
-    <h2>When to see them / what to bring</h2>
-    <ul>
-      <li>Typical visit timing and any prep (med list, forms, logs).</li>
-    </ul>
+<h2>When to Go to Them</h2>
+<ul>
+  <li>During evaluation to set up support plans and review resources.</li>
+  <li>When stress or logistics could delay surgery or follow-up.</li>
+  <li>Any time forms, employer letters, or school notes are needed.</li>
+  <li>If you or your caregiver feel overwhelmed and need rapid support.</li>
+</ul>
 
-    <div class="callout"><p><strong>Questions to ask:</strong> A short, practical list tailored to this role.</p></div>
+<h2>What They Don’t Handle (Boundaries)</h2>
+<ul>
+  <li>Medical decisions or medication changes — handled by the clinical team.</li>
+  <li>Insurance authorizations and cost estimates — financial coordinator.</li>
+  <li>Emergency mental health care — use your center’s urgent process or 911.</li>
+</ul>
 
-    <p class="disclaimer">Informational only; your center’s process may differ.</p>
   </main>
   <div data-include="/includes/footer.html"></div>
   <script src="/scripts/analytics.js" defer></script>
