--- a/hub/transplant/preop/staff/surgeon.html
+++ b/hub/transplant/preop/staff/surgeon.html
@@ -18,32 +18,47 @@
     <div data-include="/includes/transplant-preop-subnav.html"></div>
     <div data-include="/includes/transplant-preop-staff-subnav.html"></div>
 
-    <h1>Pre-Op Staff: Transplant Surgeon (Consult)</h1>
+<h1>Transplant Surgeon (Consult)</h1>
 
-    <h2>Role at a glance</h2>
-    <ul>
-      <li>What they focus on in this stage.</li>
-      <li>How they interact with you and the rest of the team.</li>
-    </ul>
+<h2>Short Description</h2>
+<p>
+  The transplant surgeon explains how your operation will be done, reviews your imaging,
+  discusses risks that apply to you, and answers technical questions about the procedure
+  and the first days after surgery.
+</p>
 
-    <h2>They handle</h2>
-    <ul>
-      <li>Key responsibilities (bulleted, plain English).</li>
-    </ul>
+<h2>Main Priorities</h2>
+<ul>
+  <li>Review imaging and anatomy to plan the operation (incision, vessel layout, prior scars).</li>
+  <li>Explain the surgical steps, expected length of surgery, and immediate recovery plan.</li>
+  <li>Discuss devices and drains (ureteral stent, catheter, surgical drain) and removal timing.</li>
+  <li>Set expectations for pain control, early walking, diet progression, and lab checks.</li>
+  <li>Outline procedure-specific risks and how the team lowers those risks.</li>
+</ul>
 
-    <h2>Not their job (who does it instead)</h2>
-    <ul>
-      <li>Boundary clarifier → points you to the right person.</li>
-    </ul>
+<h2>Issues They Work With</h2>
+<ul>
+  <li>Complex anatomy or prior abdominal surgeries that affect the approach.</li>
+  <li>Blood vessel quality and placement of the kidney for best function.</li>
+  <li>Plans for handling scar tissue, hernias, or dialysis access present at surgery.</li>
+  <li>Decision-making about stents, drains, and wound care needs after discharge.</li>
+</ul>
 
-    <h2>When to see them / what to bring</h2>
-    <ul>
-      <li>Typical visit timing and any prep (med list, forms, logs).</li>
-    </ul>
+<h2>When to Go to Them</h2>
+<ul>
+  <li>During the pre-op surgical consult and if your health changes before surgery (infection, hospitalization, new diagnosis).</li>
+  <li>When you need clarity on incision location/size, pain plan, or limits on lifting, driving, and activity.</li>
+  <li>Bring a list of past surgeries, allergies, blood thinners or antiplatelet meds, and mobility limits.</li>
+</ul>
 
-    <div class="callout"><p><strong>Questions to ask:</strong> A short, practical list tailored to this role.</p></div>
+<h2>What They Don’t Handle (Boundaries)</h2>
+<ul>
+  <li>Long-term medication plan and dose adjustments — transplant nephrologist/pharmacist.</li>
+  <li>Scheduling, instructions logistics, and test bundling — transplant coordinator.</li>
+  <li>Insurance approvals and cost estimates — financial coordinator.</li>
+  <li>Counseling, caregiver support, work/benefits paperwork — social worker.</li>
+</ul>
 
-    <p class="disclaimer">Informational only; your center’s process may differ.</p>
   </main>
   <div data-include="/includes/footer.html"></div>
   <script src="/scripts/analytics.js" defer></script>
