--- a/hub/transplant/preop/staff/index.html
+++ b/hub/transplant/preop/staff/index.html
@@ -24,11 +24,39 @@
   <div data-include="/includes/header.html"></div>
   <main class="content" id="main">
     <div data-include="/includes/transplant-subnav.html"></div>
-    <h1>Transplant Staff</h1>
-    <p>
-      Meet the different specialists involved in a kidney transplant, including surgeons,
-      nephrologists, coordinators, and nurses, and learn their roles in patient care.
-    </p>
+<div data-include="/includes/transplant-preop-subnav.html"></div>
+<div data-include="/includes/transplant-preop-staff-subnav.html"></div>
+
+<h1>Pre-Op Staff</h1>
+<p>This team clears you for surgery, coordinates tests, and prepares you for a safe recovery.</p>
+
+<section class="testimonial-summary">
+  <h2><a href="/hub/transplant/preop/staff/coordinator.html" data-evt="preop-staff:coordinator">Transplant Coordinator</a></h2>
+  <p>Your main contact for scheduling, instructions, and getting questions to the right person.</p>
+</section>
+
+<section class="testimonial-summary">
+  <h2><a href="/hub/transplant/preop/staff/nephrologist.html" data-evt="preop-staff:nephrologist">Transplant Nephrologist</a></h2>
+  <p>Reviews test results, tunes your plan, and clears you for surgery with the team.</p>
+</section>
+
+<section class="testimonial-summary">
+  <h2><a href="/hub/transplant/preop/staff/surgeon.html" data-evt="preop-staff:surgeon">Transplant Surgeon (Consult)</a></h2>
+  <p>Explains the operation, incision, stent/drain plans, and answers technical questions.</p>
+</section>
+
+<section class="testimonial-summary">
+  <h2><a href="/hub/transplant/preop/staff/social-worker.html" data-evt="preop-staff:social-worker">Social Worker</a></h2>
+  <p>Coping, caregiver planning, work/benefits, and resource referrals.</p>
+</section>
+
+<section class="testimonial-summary">
+  <h2><a href="/hub/transplant/preop/staff/financial-coordinator.html" data-evt="preop-staff:financial">Financial Coordinator</a></h2>
+  <p>Insurance, authorizations, out-of-pocket estimates, and medication coverage help.</p>
+</section>
+
+<p class="disclaimer">Informational only; roles vary by center.</p>
+
   </main>
   <div data-include="/includes/footer.html"></div>
   <script src="/scripts/analytics.js" defer></script>
