--- a/hub/transplant/preop/staff/nephrologist.html
+++ b/hub/transplant/preop/staff/nephrologist.html
@@ -18,32 +18,46 @@
     <div data-include="/includes/transplant-preop-subnav.html"></div>
     <div data-include="/includes/transplant-preop-staff-subnav.html"></div>
 
-    <h1>Pre-Op Staff: Transplant Nephrologist</h1>
+<h1>Transplant Nephrologist</h1>
 
-    <h2>Role at a glance</h2>
-    <ul>
-      <li>What they focus on in this stage.</li>
-      <li>How they interact with you and the rest of the team.</li>
-    </ul>
+<h2>Short Description</h2>
+<p>
+  A transplant nephrologist is the kidney specialist who leads your medical work-up before surgery. 
+  They review tests, confirm that transplant is safe, and tune your plan alongside the rest of the team.
+</p>
 
-    <h2>They handle</h2>
-    <ul>
-      <li>Key responsibilities (bulleted, plain English).</li>
-    </ul>
+<h2>Main Priorities</h2>
+<ul>
+  <li>Review labs, heart/lung testing, and infection screening for surgical readiness.</li>
+  <li>Explain benefits/risks and how your risks will be reduced.</li>
+  <li>Coordinate timing with dialysis (if applicable) and other specialists.</li>
+  <li>Optimize blood pressure, diabetes control, anemia, and bone/mineral balance.</li>
+  <li>Plan vaccinations and medication adjustments before surgery.</li>
+</ul>
 
-    <h2>Not their job (who does it instead)</h2>
-    <ul>
-      <li>Boundary clarifier → points you to the right person.</li>
-    </ul>
+<h2>Issues They Work With</h2>
+<ul>
+  <li>Abnormal labs (electrolytes, creatinine trends) and what to repeat or confirm.</li>
+  <li>Heart or lung findings that may need more testing before clearance.</li>
+  <li>Infection risks that must be treated or ruled out prior to surgery.</li>
+  <li>Questions about matching, crossmatch results, and what they mean for you.</li>
+</ul>
 
-    <h2>When to see them / what to bring</h2>
-    <ul>
-      <li>Typical visit timing and any prep (med list, forms, logs).</li>
-    </ul>
+<h2>When to Go to Them</h2>
+<ul>
+  <li>During the evaluation visits and any time your health changes (ER visit, new infection, hospitalization).</li>
+  <li>If you have new symptoms (fever, chest pain, shortness of breath) or big BP/weight swings.</li>
+  <li>To review what’s still pending for clearance and how close you are to “ready.”</li>
+</ul>
 
-    <div class="callout"><p><strong>Questions to ask:</strong> A short, practical list tailored to this role.</p></div>
+<h2>What They Don’t Handle (Boundaries)</h2>
+<ul>
+  <li>Insurance approvals and cost estimates — handled by the financial coordinator.</li>
+  <li>Scheduling tests and logistics — coordinated by the transplant coordinator.</li>
+  <li>Surgical approach and incision details — explained by the transplant surgeon.</li>
+</ul>
 
-    <p class="disclaimer">Informational only; your center’s process may differ.</p>
+
   </main>
   <div data-include="/includes/footer.html"></div>
   <script src="/scripts/analytics.js" defer></script>
